full header section with responsive tablate and mobile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,33 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
+        <!-- Header banner part  -->
+        <section class="container banner">
+            <div class="banner-text">
+                <h1>Explore Your Travel</h1>
+                <p class="decription">There is not much more to pack than what you usually bring in your luggage!  Think about sun <br> cream and mosquito repellent for the summer,</p>
+            </div>
+            <div class="banner-inputs">
+               <div class="inputs-container">
+                <input type="text" placeholder="Where go">
+                <select class="when-travel">
+                    <option value="When">When</option>
+                    <option value="Summer">Summer</option>
+                    <option value="Rainy">Rainy</option>
+                    <option value="Autumn">Autumn</option>
+                    <option value="Spring">Spring</option>
+                </select>
+                <select>
+                    <option value="">Select type</option>
+                    <option value="">By boat</option>
+                    <option value="">By trane</option>
+                    <option value="">By plane</option>
+                </select>
+                <button class="btn fint-btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+
+               </div>
+            </div>
+        </section>
     </header>
     <!-- Main section  -->
     <main class="main"></main>
