Our populer toures section with responsive for tablate and mobile done

--- a/index.html
+++ b/index.html
@@ -59,7 +59,25 @@
         </section>
     </header>
     <!-- Main section  -->
-    <main class="main"></main>
+    <main class="main">
+        <!-- Our Popular Tours part  -->
+        <section class="container">
+            <div class="tours">
+                <div class="tour-text">
+                    <h2 class="title">Our Popular Tours</h2>
+                    <p class="decription">Let's go, in the heart of Dhaka centre since 2021, provides first rate personalized services to all our clients and after years of steadfast service .</p>
+                    <li class="decription">Popular tours and trade started their journey with new thinking for better service to the tourist with competitive price,</li>
+                    <li class="decription">A group of professionals started their journey2019 but the professionals worked this sector last twenty years with dignity,</li>
+                    <li class="decription">opular tours and trade are a number of innovative, energetic, experienced, tourist-friendly educated tourism professionals the inbound and outbound tour operators in Bangladesh</li>
+                    <p class="decription">Popular tour and trade started their journey with new thinking for better service to the tourist with competitive price are specialized for the largest mangrove forest Sundarbans and outbound group tours. a group of professionals started their journey 2019</p>
+                    <button class="btn">Read more</button>
+                </div>
+                <div class="tour-img">
+                    <img src="./Images/Rectangle 4.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- Footer section  -->
     <footer class="footer"></footer>
 </body>
