Chose your destani section done with responsive

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section class="container">
             <div class="tours">
                 <div class="tour-text">
-                    <h2 class="title">Our Popular Tours</h2>
+                    <h2 class="titles">Our Popular Tours</h2>
                     <p class="decription">Let's go, in the heart of Dhaka centre since 2021, provides first rate personalized services to all our clients and after years of steadfast service .</p>
                     <li class="decription">Popular tours and trade started their journey with new thinking for better service to the tourist with competitive price,</li>
                     <li class="decription">A group of professionals started their journey2019 but the professionals worked this sector last twenty years with dignity,</li>
@@ -74,6 +74,53 @@
                 </div>
                 <div class="tour-img">
                     <img src="./Images/Rectangle 4.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Choose Your Destination  -->
+        <section class="destination-container container">
+            <div class="destination-text">
+                <h2 class="titles">Choose Your Destination</h2>
+                <p class="decription">  
+                    There is not much more to pack than what you usually bring in your luggage!  Think about sun <br> cream and mosquito repellent for the summer
+                </p>
+            </div>
+            <div class="destination-images">
+                <div class="first-row">
+                    <div class="item1">
+                        <img src="./Images/Rectangle 5.png" alt="">
+                        <h3>Maldives</h3>
+                    </div>
+                    <div class="item2">
+                        <img src="./Images/Rectangle 8.png" alt="">
+                        <h3>Indonesia</h3>
+                    </div>
+                </div>
+
+                <div class="second-row">
+                    <div class="item3">
+                        <img src="./Images/Rectangle 6.png" alt="">
+                        <h3>Srilanka</h3>
+                    </div>
+                    <div class="item4">
+                        <img src="./Images/Rectangle 7.png" alt="">
+                        <h3>North America</h3>
+                    </div>
+                    <div class="item5">
+                        <img src="./Images/Rectangle 9.png" alt="">
+                        <h3>Kashmir</h3>
+                    </div>
+                </div>
+
+                <div class="third-row">
+                    <div class="item6">
+                        <img src="./Images/Rectangle 11.png" alt="">
+                        <h3>Bandarban</h3>
+                    </div>
+                    <div class="item7">
+                        <img src="./Images/Rectangle 10.png" alt="">
+                        <h3>Bangladesh</h3>
+                    </div>
                 </div>
             </div>
         </section>
