--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <!-- Choose Your Destination  -->
+        <!-- Choose Your Destination part  -->
         <section class="destination-container container">
             <div class="destination-text">
                 <h2 class="titles">Choose Your Destination</h2>
@@ -121,6 +121,41 @@
                         <img src="./Images/Rectangle 10.png" alt="">
                         <h3>Bangladesh</h3>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- Why Choose Us part -->
+        <section class="container choose">
+            <div class="choose-text">
+                <h3 class="titles">Why Choose Us</h3>
+                <p class="decription">We are innovative and passionate about your journey we do. We always come up with new ways to enrich your  journey <br> to greater heights. Extraordinary .</p>
+            </div>
+            <div class="choose-top-part">
+                <div class="hotels">
+                    <img src="./Images/hotel.png" alt="">
+                    <h4>Handpicked Hotels</h4>
+                    <p class="decription">
+                        What is the service hotel?
+                        Hotel service means renting of rooms, houses, or lodges for a fee, including all services offered at the hotel,
+                    </p>
+                </div>
+                <div class="service">
+                    <img src="./Images/map.png" alt="">
+                    <h4>World Class Service</h4>
+                    <p class="decription">
+                        What is the service hotel?
+                        Hotel service means renting of rooms, houses, or lodges for a fee, including all services offered at the hotel,
+                    </p>
+                </div>
+            </div>
+            <div class="choose-bottom-part">
+                <div class="guarantee">
+                    <img src="./Images/grenty.png" alt="">
+                    <h4>Best Price Guarantee</h4>
+                    <p class="decription">
+                        What is the service hotel?
+                        Hotel service means renting of rooms, houses, or lodges for a fee, including all services offered at the hotel,
+                    </p>
                 </div>
             </div>
         </section>
