discount section with full responsive for mobile and tablate

--- a/index.html
+++ b/index.html
@@ -159,6 +159,56 @@
                 </div>
             </div>
         </section>
+        <section class="container discounts">
+            <div class="discounts-text">
+                <h3 class="titles">Deals & Discounts</h3>
+                <p class="decription">Cash discounts, fixed percentage and free shipping are probably three of the absolute go-to ways to make your customers feel <br> appreciated, attract new ones or win old ones back.</p>
+            </div>
+            <div class="discount-contents">
+                <div class="satorini1">
+                    <div class="satorini-content">
+                        <div class="satorini-icons">
+                            <h5><i class="fa-solid fa-clock"></i> <span> 7 Days/ 6 Nights </span></h5>
+                            <h5><i class="fa-solid fa-people-line"> </i><span> Max : 100</span></h5>
+                            <h5><i class="fa-solid fa-location-dot"></i> <span> Malaysha</span></h5>
+                        </div>
+                        <h1>Tour To Satorini</h1> 
+                        <p class="decription">Malaysia is a Southeast Asian country occupying parts of the Malay Peninsula and the island of Borneo. </p>
+                        <h5>Price : 1300$ - 1500$</h5>
+                        <button class="btn">Book now</button>
+                    </div>
+                </div>
+
+                <div class="satorini2">
+                    <div class="satorini-content">
+                        <div class="satorini-icons">
+                            <h5><i class="fa-solid fa-clock"></i> <span> 7 Days/ 6 Nights </span></h5>
+                            <h5><i class="fa-solid fa-people-line"> </i><span> Max : 100</span></h5>
+                            <h5><i class="fa-solid fa-location-dot"></i> <span> Malaysha</span></h5>
+                        </div>
+                        <h1>Tour To Satorini</h1> 
+                        <p class="decription">Malaysia is a Southeast Asian country occupying parts of the Malay Peninsula and the island of Borneo. </p>
+                        <h5>Price : 1300$ - 1500$</h5>
+                        <button class="btn">Book now</button>
+                    </div>
+                </div>
+
+                <div class="satorini3">
+                    <div class="satorini-content">
+                        <div class="satorini-icons">
+                            <h5><i class="fa-solid fa-clock"></i> <span> 7 Days/ 6 Nights </span></h5>
+                            <h5><i class="fa-solid fa-people-line"> </i><span> Max : 100</span></h5>
+                            <h5><i class="fa-solid fa-location-dot"></i> <span> Malaysha</span></h5>
+                        </div>
+                        <h1>Tour To Satorini</h1> 
+                        <p class="decription">Malaysia is a Southeast Asian country occupying parts of the Malay Peninsula and the island of Borneo. </p>
+                        <h5>Price : 1300$ - 1500$</h5>
+                        <button class="btn">Book now</button>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
     </main>
     <!-- Footer section  -->
     <footer class="footer"></footer>
