add a button see all button

--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
                         <button class="btn">Book now</button>
                     </div>
                 </div>
-                
+
+            </div>
+            <div class="pakcges-btn">
+                <button class="btn">All Packages</button>
             </div>
         </section>
     </main>
