A Simple Perfect Place To Get Lost part with responsive

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                 </div>
             </div>
         </section>
+        <!-- Deals & Discounts part  -->
         <section class="container discounts">
             <div class="discounts-text">
                 <h3 class="titles">Deals & Discounts</h3>
@@ -212,6 +213,27 @@
                 <button class="btn">All Packages</button>
             </div>
         </section>
+        <!-- A Simple Perfect Place To Get Lost -->
+        <section class="container simple-place">
+            <div class="simple-place-text">
+                <h1 class="titles">A Simple Perfect Place To Get Lost</h1>
+                <p class="decription">
+                It is also known for its beautiful natural landscapes, including the Sundarbans mangrove forest, which is home to the Bengal tiger, <br> and the many rivers that crisscross the country.
+                </p>
+                <li class="decription">Which is home to the Bengal      tiger, and the many rivers that crisscross the country.</li>
+                <li class="decription">What is special in Bangladesh?
+                    It is also known for its beautiful natural landscapes, .
+                </li>
+                <p class="decription">
+                    It is also known for its beautiful natural landscapes, including the Sundarbans mangrove forest, which is home to the Bengal tiger, <br> and the many rivers that crisscross the country.
+                </p>
+                <button class="btn">See More</button>
+            </div>
+            <div class="simple-place-video">
+                <video controls src="./Images/natue3.mp4"></video>
+            </div>
+        </section>
+        
     </main>
     <!-- Footer section  -->
     <footer class="footer"></footer>
