newletter section with full responsive

--- a/index.html
+++ b/index.html
@@ -233,7 +233,27 @@
                 <video controls src="./Images/natue3.mp4"></video>
             </div>
         </section>
-        
+        <!-- Newsletter section  -->
+        <section class="container newsletter-section">
+           <div class="newsletter">
+            <div class="newsletter-text"> 
+                <h3>Newsletter</h3>
+                <p class="decription">Get your daily dose of travel news & tips. Sign up today!</p>
+                <div class="newsletter-inputs">
+                    <input type="text" placeholder="Enter your name ">
+                    <input type="email" placeholder="Enter your email ">
+                    <button class="btn">Subcribe</button>
+                </div>
+            </div>
+            <div class="newsletter-img">
+                <img src="./Images/Rectangle 8 (1).png" alt="">
+                <div class="inner-img-text">
+                    <h3>Let's Go.com</h3>
+                    <h1>Save up to 70%</h1>
+                </div>
+            </div>
+           </div>
+        </section>
     </main>
     <!-- Footer section  -->
     <footer class="footer"></footer>
