Extera section with full responsive all devices

--- a/index.html
+++ b/index.html
@@ -254,6 +254,18 @@
             </div>
            </div>
         </section>
+        <!-- Wnter travels -->
+        <section class="container winter">
+            <h2>Our winter travel </h2>
+            <div class="winter-travel">
+                <marquee behavior="" direction="">
+                    <h1 id="special-text">75% Discount</h1>
+                </marquee>
+                <h1 class="titles">Your go-to guide for winter travel</h1>
+                <p class="decription">From festive towns and snowy adventures to tropical escapes</p>
+                <button class="btn">Book now</button>
+            </div>
+        </section>
     </main>
     <!-- Footer section  -->
     <footer class="footer"></footer>
