--- a/index.html
+++ b/index.html
@@ -268,6 +268,25 @@
         </section>
     </main>
     <!-- Footer section  -->
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="footer-logo">
+                <img src="./Images/Group 40071 (2).png" alt="">
+                <h1>Let's<span>Go</span></h1>
+            </div>
+            <p class="decription">The website footer is the section of content at the very bottom of a web page. It typically contains a copyright notice, <br> link to a privacy policy</p>
+            <div class="footer-icons">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <hr>
+            <div class="copy">
+                <h4>2017, All Rights Reserved.</h4>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
